text align fix

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -74,5 +74,8 @@
         gap: 1.5rem;
     }
 
+    .a_description{
+        text-align: center;
+    }
 
 }
